# Sentoni

./: LICENSE.txt  README.md  bun.lockb  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: main.yml
src/: App.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns  icon.psd
src-tauri/src/: database.rs  main.rs  models.rs  schemas.rs
src-tauri/src/controllers/: attendance_book_controller.rs  event_controller.rs  event_type_controller.rs  hierarchy_controller.rs  mod.rs  numeration_controller.rs  personnel_controller.rs  reminder_controller.rs
src-tauri/src/repositories/: event_repository.rs  event_type_repository.rs  hierarchy_repository.rs  mod.rs  personnel_repository.rs  reminder_repository.rs
src/components/: DateDisplay.jsx  EventDetails.jsx  EventForm.jsx  EventInfo.jsx  EventModal.jsx  EventTypeForm.jsx  LazyComponent.jsx  LoadingScreen.jsx  MonthProgress.jsx  PersonnelForm.jsx  ReminderPanel.jsx
src/views/: AttendanceBook.jsx  Database.jsx  EventType.jsx  Hierarchy.jsx  MonthlyEvents.jsx  Numeration.jsx  PersonEventsHistory.jsx  Personnel.jsx  Sentoni.jsx
