[package]
name = "sentoni"
version = "1.0.0"
description = "Personnel management software"
authors = ["Manos Gouvrikos"]
license = "MIT"
repository = "https://github.com/Manosgou/Sentoni"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
    "window-close",
    "dialog-save",
    "dialog-open",
    "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ormlite = { version = "0.17.5", features = ["sqlite"] }
tokio = { version = "1.34.0", features = ["full"] }
chrono = "0.4.31"
futures = "0.3.29"
rust_xlsxwriter = "0.56.0"
csv = "1.3.0"
jsonm = "0.1.2"
open = "5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
